# brpc-depend-use-bzlmod-example

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
echo_c++/: client.cpp  server.cpp
